--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --ignore src/storage/ src/app.ts PRAVDA_URL='https://pravda.com.ua/'"
+    "start": "nodemon --ignore src/storage/ src/app.ts"
   },
   "keywords": [],
   "author": "",
