--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.18.2",
     "iconv-lite": "^0.6.3",
     "iso-8859-2": "^3.0.4",
-    "mongoose": "^6.8.4"
+    "mongoose": "^6.8.4",
+    "winston": "^3.8.2"
   }
 }
