--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --ignore src/storage/ src/app.ts"
+    "start": "nodemon --ignore src/storage/ --exec \"node --experimental-specifier-resolution=node --loader ts-node/esm\" src/app.ts "
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,7 @@
     "@types/cheerio": "^0.22.31",
     "@types/config": "^3.3.0",
     "@types/iconv": "^3.0.1",
+    "@types/uuid": "^9.0.1",
     "axios": "^1.2.1",
     "cheerio": "^1.0.0-rc.12",
     "date-fns": "^2.29.3",
@@ -28,7 +30,8 @@
     "express": "^4.18.2",
     "iconv-lite": "^0.6.3",
     "iso-8859-2": "^3.0.4",
-    "mongoose": "^6.8.4",
+    "mongoose": "^7.0.4",
+    "uuid": "^9.0.0",
     "winston": "^3.8.2"
   }
 }
