--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "module": "esnext",
   "compilerOptions": {
     "target": "es6",
+    "module": "ESNext",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true
