--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "iconv-lite": "^0.6.3",
     "iso-8859-2": "^3.0.4",
     "mongoose": "^7.0.4",
+    "socket.io": "^4.6.1",
     "uuid": "^9.0.0",
     "winston": "^3.8.2"
   }
