--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   "dependencies": {
     "@types/cheerio": "^0.22.31",
     "@types/config": "^3.3.0",
+    "@types/cors": "^2.8.13",
     "@types/iconv": "^3.0.1",
     "@types/uuid": "^9.0.1",
     "axios": "^1.2.1",
     "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "eslint": "^8.32.0",
