--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/iconv": "^3.0.1",
     "@types/uuid": "^9.0.1",
     "axios": "^1.2.1",
+    "body-parser": "^1.20.2",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "date-fns": "^2.29.3",
