--- a/package.json
+++ b/package.json
@@ -6,36 +6,37 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "ts-node -P ./tsconfig.json ./src/app.ts",
     "start": "nodemon --ignore src/storage/ --exec \"node --experimental-specifier-resolution=node --loader ts-node/esm\" src/app.ts "
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.20",
-    "prettier": "^2.8.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "nodemon": "2.0.20",
+    "prettier": "2.8.1",
+    "ts-node": "10.9.2",
+    "typescript": "4.9.5"
   },
   "dependencies": {
-    "@types/cheerio": "^0.22.31",
-    "@types/config": "^3.3.0",
-    "@types/cors": "^2.8.13",
-    "@types/iconv": "^3.0.1",
-    "@types/uuid": "^9.0.1",
-    "axios": "^1.2.1",
-    "body-parser": "^1.20.2",
-    "cheerio": "^1.0.0-rc.12",
-    "cors": "^2.8.5",
-    "date-fns": "^2.29.3",
-    "dotenv": "^16.0.3",
-    "eslint": "^8.32.0",
-    "express": "^4.18.2",
-    "iconv-lite": "^0.6.3",
-    "iso-8859-2": "^3.0.4",
-    "mongoose": "^7.0.4",
-    "socket.io": "^4.6.1",
-    "uuid": "^9.0.0",
-    "winston": "^3.8.2"
+    "@types/cheerio": "0.22.31",
+    "@types/config": "3.3.0",
+    "@types/cors": "2.8.13",
+    "@types/iconv": "3.0.1",
+    "@types/uuid": "9.0.1",
+    "axios": "1.2.1",
+    "body-parser": "1.20.2",
+    "cheerio": "1.0.0-rc.12",
+    "cors": "2.8.5",
+    "date-fns": "2.29.3",
+    "dotenv": "16.0.3",
+    "eslint": "8.32.0",
+    "express": "4.18.2",
+    "iconv-lite": "0.6.3",
+    "iso-8859-2": "3.0.4",
+    "mongoose": "7.0.4",
+    "socket.io": "4.6.1",
+    "uuid": "9.0.0",
+    "winston": "3.8.2"
   }
 }
